# ChangeLog for net-analyzer/mirmon
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mirmon/ChangeLog,v 1.8 2009/10/29 16:21:00 darkside Exp $

*mirmon-1.38-r2 (29 Oct 2009)

  29 Oct 2009; Jeremy Olexa <darkside@gentoo.org> -mirmon-1.38-r1.ebuild,
  +mirmon-1.38-r2.ebuild:
  Forgot to add dependancy on dev-perl/Socket6 in last commit. Fix HOMEPAGE
  and SRC_URI.

*mirmon-1.38-r1 (29 Oct 2009)

  29 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/0001-Add-rsync-monitoring-support-to-mirmon.patch,
  +files/0002-Add-ipv6-monitor-support-to-mirmon.patch,
  +mirmon-1.38-r1.ebuild, metadata.xml:
  Revbump to add patches for rsync and ipv6 support, Gentoo bug 289942 &
  289943

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove jforman from metadata.xml (#38728)

*mirmon-1.38 (18 Jan 2008)

  18 Jan 2008; Raúl Porcel <armin76@gentoo.org> -mirmon-1.36.ebuild,
  -mirmon-1.37.ebuild, +mirmon-1.38.ebuild:
  Version bump, remove old, add ~amd64

*mirmon-1.37 (05 Jul 2007)

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> +mirmon-1.37.ebuild:
  Version bump

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  19 Jul 2005; David Holm <dholm@gentoo.org> mirmon-1.36.ebuild:
  Added to ~ppc.

  02 Feb 2005; Jeffrey Forman <jforman@gentoo.org> :
  Initial version of mirmon ebuild, version 1.36. To monitor mirrors update
  status
