@@ -1,7 +1,6 @@
 AUX 0001-Add-rsync-monitoring-support-to-mirmon.patch 2625 RMD160 ccea0b3746f25ac201e8a4b1da62cf660cc32678 SHA1 00f706252d3eb2585bca51b8a80cddc887d84243 SHA256 2c056f5ccaa4a5f31e773e6540e42f48a6a6b34cf27f38190b4af989b131bb0e
 AUX 0002-Add-ipv6-monitor-support-to-mirmon.patch 1058 RMD160 e814e1f0fbd15fa638cccca0d203cd168c269ecf SHA1 d7fdc3380749d711f9c050ac4f860f8fa64feb75 SHA256 3000bc77566dc2b1dbc45cfa5dbd740af799598f7a1e0cdca4e441fd347c4a5b
 DIST mirmon-1.38.tar.gz 33021 RMD160 2f97e90313321d8f9eee14716ce6c4e04cf90ef4 SHA1 874b449a7b7397dd0ff215339051e434a26ee017 SHA256 5defb2c0890d3461a2b8dd8cc3efc4c63c0814c043cb227a69b4a457a38b0ce3
-EBUILD mirmon-1.38-r2.ebuild 876 RMD160 9c4ff56deaf6c6b83c86099fd52c5f856c643e6f SHA1 05259c8de53406d80a526679a98bbb4a14ff743a SHA256 93e9409e0cc5cce5fd00d22624077e8716e27d9877577dd0e7e954734c45729c
-EBUILD mirmon-1.38.ebuild 647 RMD160 9f4ecf4e5fca9abb63e94987a4b8232fbdeefb16 SHA1 0a617bcbc67590a9c28b8a3470de950eb267bf63 SHA256 9d2771906f867dbb1b5c367495b30f8b261bf7fe1cf290d43a11f4a6fdada0c9
-MISC ChangeLog 1487 RMD160 c5e2b1c525dfa0a611af0b5a9df23dff4809106f SHA1 8f23f773131a16819baaa761098ad4065823c098 SHA256 a5133a49cfcbd0c54cdc09807d4c5b522269535ba3aca9cae77e9c1e94c1b67c
+EBUILD mirmon-1.38-r2.ebuild 901 RMD160 8cf4415eeda2fa026f9456c041f756bae3c464d7 SHA1 b1b4f527f39c31c94a4a9ad07a3319dfebc0cfc3 SHA256 b816cff6403efc58441be557b43d6007553349385be27ca53350214df14c2587
+MISC ChangeLog 1620 RMD160 db9f50d873c4ed2e3f397a61fab99d4cff30059f SHA1 94b1a549ce74779a34a3095093f329b04fe2debb SHA256 afbcbc0966d0faa4ecd7036de38d5157935223aa1c137c97725ade25b8cdcb9c
 MISC metadata.xml 367 RMD160 e4b6603315a56e8c09aa9ee05df30871d846cc09 SHA1 c935e1ff36115465f4525348385faa9e40370ec1 SHA256 6528e81776c84cef34ffe7ec71e400fc6eafc02a9e7fc2a26ad37bcce8ba5bec
