@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/mirmon
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mirmon/ChangeLog,v 1.8 2009/10/29 16:21:00 darkside Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mirmon/ChangeLog,v 1.9 2010/03/09 23:30:32 darkside Exp $
+
+  09 Mar 2010; Jeremy Olexa <darkside@gentoo.org> -mirmon-1.38.ebuild,
+  mirmon-1.38-r2.ebuild:
+  Add missing dep on perl-File-Temp
 
 *mirmon-1.38-r2 (29 Oct 2009)
 
